padding mellem nav og header

--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -1,7 +1,7 @@
 #nav {
   display: flex;
   justify-content: space-evenly;
-  padding-top: 2%;
+  padding: 2% 0;
   .img-h4 {
     width: 50%;
     display: flex;
