--- a/src/css/all-sites.scss
+++ b/src/css/all-sites.scss
@@ -1,4 +1,3 @@
-@import url("general.css");
-@import url("header.css");
-@import url("nav.css");
-@import url("variables.css");
+@import url('general.css');
+@import url('nav.css');
+@import url('variables.css');
