den første section er færdig

--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -11,6 +11,8 @@
         <%- include('../partials/header') %>
         
         <main>
+            <%- include('../partials/om-os') %>
+
         </main>
 
         <%- include('../partials/footer') %>
