bliv frivillig sectionen er færdig

--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -12,6 +12,8 @@
         
         <main>
             <%- include('../partials/om-os') %>
+            
+            <%- include('../partials/bliv-frivillig') %>
 
         </main>
 
