dyr i nød sectionen færdig

--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -12,8 +12,10 @@
         
         <main>
             <%- include('../partials/om-os') %>
-            
+
             <%- include('../partials/bliv-frivillig') %>
+
+            <%- include('../partials/dyr-i-nod') %>
 
         </main>
 
