tilføjede sectionerne til index

--- a/src/css/index/index.scss
+++ b/src/css/index/index.scss
@@ -3,3 +3,6 @@
 @import url('om-os.css');
 @import url('bliv-frivillig.css');
 @import url('dyr-i-nod.css');
+@import url('nyhedsbrev.css');
+@import url('adopter-et-dyr.css');
+@import url('dyr-hos-os.css');
