--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -17,6 +17,13 @@
 
             <%- include('../partials/dyr-i-nod') %>
 
+            <%- include('../partials/nyhedsbrev') %>
+
+            <%- include('../partials/adopter-et-dyr') %>
+
+            <%- include('../partials/dyr-hos-os') %>
+
+            
         </main>
 
         <%- include('../partials/footer') %>
