--- a/src/html/partials/footer.ejs
+++ b/src/html/partials/footer.ejs
@@ -1,3 +1,21 @@
-<footer>
-    
+<footer id="footer">
+  <div class="kontakt">
+    <h5>Kontakt</h5>
+    <p>Tornebuskvej 22, 1.</p>
+    <p>1131 København K</p>
+    <p>CVR: 22446187</p>
+    <p>Husk at du kan få fradrag for donationer på op til 16.600 kr.</p>
+  </div>
+  <p class="copyright">
+    <i class="far fa-copyright"></i> 2020 - Foreningen for Dyrevelfærd
+  </p>
+  <div class="partnere">
+    <h5>Partnere</h5>
+    <a href="https://anima.dk/">Anima</a>
+    <a href="https://www.worldanimalprotection.org/">World Animal Protection</a>
+    <a href="https://www.foedevarestyrelsen.dk/Sider/forside.aspx"
+      >Fødfevarestyrelsen</a
+    >
+    <a href="https://faktalink.dk/">Faktalink</a>
+  </div>
 </footer>
