sæt en placeholder fordi nu henter jeg fra apiet

--- a/src/html/partials/header.ejs
+++ b/src/html/partials/header.ejs
@@ -2,7 +2,7 @@
   <h1>Foreningen for Dyrevelfærd</h1>
   <p>Vi specialisere os i dyrevelfærd</p>
   <img
-    src="./assets/images/header/kittens.jpg"
+    src="https://via.placeholder.com/728x90.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide"
     alt="kittens"
     id="header-kittens"
   />
