--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -27,5 +27,5 @@
         <%- include('../partials/footer') %>
 
     </div>
-
+    <script src="./assets/js/fetch-header.js"></script>
 <%- include('../partials/last') %>
