--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -28,4 +28,6 @@
 
     </div>
     <script src="./assets/js/fetch-header.js"></script>
+    <script src="./assets/js/fetch-dyr-hos-os.js"></script>
+
 <%- include('../partials/last') %>
