--- a/src/css/index/bliv-frivillig.scss
+++ b/src/css/index/bliv-frivillig.scss
@@ -1,24 +1,30 @@
 #bliv-frivillig {
-  display: grid;
-  grid-template-columns: repeat(3, 30%);
-  column-gap: 3%;
   padding: 0 10% 2% 10%;
   background-color: var(--light-blue);
-  section {
-    margin: 10% 0;
-    background-color: #fff;
-    height: 90%;
-    h3 {
-      padding: 2%;
-      background-color: var(--off-white);
-      border-bottom: solid 1px var(--grey);
-    }
-    img {
-      width: 100%;
-      padding: 2%;
-    }
-    p {
-      padding: 0 2%;
+  h2 {
+    color: var(--text-blue);
+    padding-top: 2%;
+  }
+  .bliv-frivillig-sectioner {
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
+    column-gap: 3%;
+    section {
+      margin: 10% 0;
+      background-color: #fff;
+      height: 90%;
+      h3 {
+        padding: 2%;
+        background-color: var(--off-white);
+        border-bottom: solid 1px var(--grey);
+      }
+      img {
+        width: 100%;
+        padding: 2%;
+      }
+      p {
+        padding: 0 2%;
+      }
     }
   }
 }
