--- a/src/css/index/dyr-hos-os.scss
+++ b/src/css/index/dyr-hos-os.scss
@@ -1,5 +1,5 @@
 #dyr-hos-os {
-  padding: 2% 10%;
+  padding: 2% 10% 12% 10%;
   display: grid;
   grid-template-columns: repeat(2, 45%);
   grid-template-rows: 10% auto;
