--- a/src/html/partials/bliv-frivillig.ejs
+++ b/src/html/partials/bliv-frivillig.ejs
@@ -1,36 +1,6 @@
 <article id="bliv-frivillig">
   <h2>Bliv frivillig</h2>
   <section class="bliv-frivillig-sectioner">
-    <section>
-      <h3>Dyreredder</h3>
-      <img src="./assets/images/volunteer/volunteer.jpg" alt="volunteer" />
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-        mollitia quod voluptatum quis quibusdam nobis. Error, doloribus. Error,
-        recusandae modi, impedit obcaecati enim adipisci veniam repudiandae sed
-        quibusdam autem corporis!
-      </p>
-      <p></p>
-    </section>
-    <section>
-      <h3>Kredsformand</h3>
-      <img src="./assets/images/volunteer/leading.jpg" alt="leading" />
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio
-        aliquid dignissimos est officiis, vel eligendi velit dolorem corporis
-        quidem cupiditate, aliquam consequatur assumenda error ea officia sed,
-        quia architecto voluptatem?
-      </p>
-    </section>
-    <section>
-      <h3>Bliv internatfrivillig</h3>
-      <img src="./assets/images/volunteer/internat.jpg" alt="internat" />
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
-        corrupti voluptatem. Beatae eaque voluptates tempora ea molestias
-        dignissimos molestiae nulla deleniti harum nihil, esse a animi iste.
-        Nisi, cum dignissimos.
-      </p>
-    </section>
+    <!-- henter fra apiet -->
   </section>
 </article>
