--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -29,5 +29,6 @@
     </div>
     <script src="./assets/js/fetch-header.js"></script>
     <script src="./assets/js/fetch-dyr-hos-os.js"></script>
+    <script src="./assets/js/bliv-frivillig.js"></script>
 
 <%- include('../partials/last') %>
