nu kan man klikke på dyrene på index siden og se det enkelte dyr på en anden side

--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -30,5 +30,7 @@
     <script src="./assets/js/fetch-header.js"></script>
     <script src="./assets/js/fetch-dyr-hos-os.js"></script>
     <script src="./assets/js/bliv-frivillig.js"></script>
+    <script src="./assets/js/nyhedsbrev.js"></script>
+
 
 <%- include('../partials/last') %>
