om os sectionen kommer nu fra apiet

--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -31,6 +31,6 @@
     <script src="./assets/js/fetch-dyr-hos-os.js"></script>
     <script src="./assets/js/bliv-frivillig.js"></script>
     <script src="./assets/js/nyhedsbrev.js"></script>
-
+    <script src="./assets/js/om-os.js"></script>
 
 <%- include('../partials/last') %>
