tilføjede tekst fra apiet

--- a/src/html/partials/header.ejs
+++ b/src/html/partials/header.ejs
@@ -1,9 +1,3 @@
 <header id="header">
-  <h1>Foreningen for Dyrevelfærd</h1>
-  <p>Vi specialisere os i dyrevelfærd</p>
-  <img
-    src="https://via.placeholder.com/728x90.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide"
-    alt="kittens"
-    id="header-kittens"
-  />
+  <!-- her henter jeg fra apiet -->
 </header>
