--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -32,5 +32,6 @@
     <script src="./assets/js/bliv-frivillig.js"></script>
     <script src="./assets/js/nyhedsbrev.js"></script>
     <script src="./assets/js/om-os.js"></script>
+    <script src="./assets/js/dyr-i-nod.js"></script>
 
 <%- include('../partials/last') %>
