--- a/src/html/partials/dyr-i-nod.ejs
+++ b/src/html/partials/dyr-i-nod.ejs
@@ -1,5 +1,3 @@
 <section id="dyr-i-nod">
-  <img src="./assets/images/help/save.jpg" alt="dyr i nød" id="dyr-i-nod-img" />
-  <h4>Står du med et dyr i nød?</h4>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores.</p>
+  <!-- henter fra apiet -->
 </section>
