ændrede navne på js filer aå at man ved at det er fetch

--- a/src/html/templates/et-dyr.ejs
+++ b/src/html/templates/et-dyr.ejs
@@ -15,6 +15,6 @@
         <%- include('../partials/footer') %>
 
     </div>
-    <script src="./assets/js/et-dyr.js"></script>
+    <script src="./assets/js/fetch-et-dyr.js"></script>
 
 <%- include('../partials/last') %>
