--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -29,9 +29,10 @@
     </div>
     <script src="./assets/js/fetch-header.js"></script>
     <script src="./assets/js/fetch-dyr-hos-os.js"></script>
-    <script src="./assets/js/bliv-frivillig.js"></script>
-    <script src="./assets/js/nyhedsbrev.js"></script>
-    <script src="./assets/js/om-os.js"></script>
-    <script src="./assets/js/dyr-i-nod.js"></script>
+    <script src="./assets/js/fetch-bliv-frivillig.js"></script>
+    <script src="./assets/js/fetch-nyhedsbrev.js"></script>
+    <script src="./assets/js/fetch-om-os.js"></script>
+    <script src="./assets/js/fetch-dyr-i-nod.js"></script>
+    <script src="./assets/js/fetch-adopter-et-dyr.js"></script>
 
 <%- include('../partials/last') %>
