--- a/src/html/partials/adopter-et-dyr.ejs
+++ b/src/html/partials/adopter-et-dyr.ejs
@@ -1,9 +1,3 @@
 <section id="adopter-et-dyr">
-  <img
-    src="./assets/images/adopt/adopt.jpg"
-    alt="dyr i nød"
-    id="adopter-et-dyr-img"
-  />
-  <h4>Adopter et dyr</h4>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores.</p>
+  <!-- henter fra apiet -->
 </section>
