--- a/src/html/partials/nav.ejs
+++ b/src/html/partials/nav.ejs
@@ -3,12 +3,12 @@
     <img src="./assets/images/logo.png" alt="logo" id="nav-logo" />
     <h4>Foreningen for Dyrevelfærd</h4>
   </div>
+  <i class="fas fa-caret-down" id="drop-down"></i>
   <ul>
     <li id="hjem"><a href="index.html">Hjem</a></li>
     <li id="om-os"><a href="index.html">Om os</a></li>
     <li id="frivillig"><a href="index.html">Bliv Frivillig</a></li>
     <li id="dyr-i-nød"><a href="index.html">Dyr i nød?</a></li>
     <li id="adopter"><a href="index.html">Adopter et dyr</a></li>
-    <li id="drop-down">nav item</li>
   </ul>
 </nav>
