--- a/src/html/partials/last.ejs
+++ b/src/html/partials/last.ejs
@@ -1,6 +1,4 @@
-<!-- font awesome -->
         <script src="https://kit.fontawesome.com/2677b557d6.js"></script>
-<!-- change js, this one goes on all pages -->
-        <!-- <script src="./assets/js/drop-down.js"></script> -->
+        <script src="./assets/js/drop-down.js"></script>
     </body>
 </html>
