--- a/src/css/index/dyr-hos-os.scss
+++ b/src/css/index/dyr-hos-os.scss
@@ -1,5 +1,5 @@
 #dyr-hos-os {
-  padding: 2% 10% 12% 10%;
+  padding: 2% 10% 0 10%;
   display: grid;
   grid-template-columns: repeat(2, 45%);
   grid-template-rows: 10% auto;
@@ -32,5 +32,22 @@
     .et-dyr__grey {
       color: var(--grey);
     }
+  }
+}
+@media only screen and (max-width: 1353px) {
+  #dyr-hos-os {
+    padding: 2% 10% 15% 10%;
+  }
+}
+
+@media only screen and (max-width: 1161px) {
+  #dyr-hos-os {
+    padding: 2% 10% 18% 10%;
+  }
+}
+
+@media only screen and (max-width: 1063px) {
+  #dyr-hos-os {
+    padding: 2% 10% 20% 10%;
   }
 }
