--- a/src/html/partials/footer.ejs
+++ b/src/html/partials/footer.ejs
@@ -1,13 +1,26 @@
-<footer id="footer">
+<footer
+  itemscope
+  itemtype="http://schema.org/LocalBusiness"
+  itemref="_name1 nav-logo _url9"
+  id="footer"
+>
   <div class="kontakt">
     <h5>Kontakt</h5>
-    <p>Tornebuskvej 22, 1.</p>
-    <p>1131 København K</p>
-    <p>CVR: 22446187</p>
+
+    <span
+      id="_address4"
+      itemprop="address"
+      itemscope
+      itemtype="http://schema.org/PostalAddress"
+      ><p itemprop="streetAddress">Tornebuskvej 22, 1.</p>
+      <p itemprop="postalCode">1131 København K</p></span
+    >
+    <p>CVR: <span id="_telephone3" itemprop="telephone">22446187</span></p>
     <p>Husk at du kan få fradrag for donationer på op til 16.600 kr.</p>
   </div>
   <p class="copyright">
-    <i class="far fa-copyright"></i> 2020 - Foreningen for Dyrevelfærd
+    <i class="far fa-copyright" aria-hidden="true"></i> 2020 - Foreningen for
+    Dyrevelfærd
   </p>
   <div class="partnere">
     <h5>Partnere</h5>
