dyr i nød mediaqueries

--- a/src/css/index/dyr-i-nod.scss
+++ b/src/css/index/dyr-i-nod.scss
@@ -8,18 +8,19 @@
   overflow: hidden;
   height: 380px;
   h4 {
-    grid-column: 1;
+    grid-column: 1 / span 2;
     grid-row: 1;
     z-index: 2;
-    place-self: end center;
+    place-self: end start;
     font-size: 40px;
+    padding-left: 5%;
   }
   p {
-    grid-column: 1;
+    grid-column: 1 / span 2;
     grid-row: 2;
     z-index: 2;
     place-self: start;
-    padding-left: 22%;
+    padding-left: 5.4%;
   }
   #dyr-i-nod-img {
     width: 100%;
@@ -27,5 +28,42 @@
     grid-column: 1 / span 2;
     z-index: 1;
     place-self: center;
+  }
+}
+@media only screen and (max-width: 919px) {
+  #dyr-i-nod {
+    height: 286px;
+  }
+}
+@media only screen and (max-width: 752px) {
+  #dyr-i-nod {
+    height: 208px;
+  }
+}
+@media only screen and (max-width: 568px) {
+  #dyr-i-nod h4 {
+    font-size: 36px;
+  }
+  #dyr-i-nod p {
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 530px) {
+  #dyr-i-nod h4 {
+    font-size: 32px;
+  }
+  #dyr-i-nod p {
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width: 436px) {
+  #dyr-i-nod {
+    height: 166px;
+  }
+  #dyr-i-nod h4 {
+    font-size: 27px;
+  }
+  #dyr-i-nod p {
+    font-size: 9px;
   }
 }
