--- a/src/css/index/nyhedsbrev.scss
+++ b/src/css/index/nyhedsbrev.scss
@@ -22,10 +22,12 @@
     .form__email {
       grid-row: 1;
       grid-column: 2;
+      padding-left: 1%;
     }
     .form__name {
       grid-row: 1;
       grid-column: 1;
+      padding-left: 1%;
     }
     .form__submit {
       color: #fff;
@@ -34,7 +36,69 @@
       border-radius: 4px;
       padding: 1%;
       place-self: end;
-      width: 25%;
+      width: 30%;
+    }
+  }
+}
+
+@media only screen and (max-width: 1130px) {
+  #nyhedsbrev p {
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 1013px) {
+  #nyhedsbrev .form .form__submit {
+    width: 37%;
+  }
+}
+@media only screen and (max-width: 980px) {
+  #nyhedsbrev p {
+    font-size: 10px;
+  }
+}
+@media only screen and (max-width: 825px) {
+  #nyhedsbrev {
+    padding: 2%;
+  }
+}
+@media only screen and (max-width: 659px) {
+  #nyhedsbrev {
+    flex-direction: column;
+    padding: 2% 23%;
+    text-align: center;
+    p {
+      padding-bottom: 5%;
+    }
+    .form {
+      display: grid;
+      grid-template-rows: repeat(2, 40%);
+      grid-template-columns: repeat(2, 40%);
+      gap: 10%;
+      width: 113%;
+      .form__submit {
+        margin-top: 10%;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 559px) {
+  #nyhedsbrev {
+    padding: 2% 13%;
+  }
+}
+@media only screen and (max-width: 407px) {
+  #nyhedsbrev h4 {
+    font-size: 24px;
+  }
+}
+@media only screen and (max-width: 367px) {
+  #nyhedsbrev {
+    padding: 2% 5%;
+    h4 {
+      font-size: 22px;
+    }
+    .form .form__submit {
+      width: 46%;
     }
   }
 }
