--- a/src/css/index/dyr-i-nod.scss
+++ b/src/css/index/dyr-i-nod.scss
@@ -59,11 +59,11 @@
 @media only screen and (max-width: 436px) {
   #dyr-i-nod {
     height: 166px;
-  }
-  #dyr-i-nod h4 {
-    font-size: 27px;
-  }
-  #dyr-i-nod p {
-    font-size: 9px;
+    h4 {
+      font-size: 27px;
+      p {
+        font-size: 9px;
+      }
+    }
   }
 }
