--- a/src/css/index/dyr-hos-os.scss
+++ b/src/css/index/dyr-hos-os.scss
@@ -34,20 +34,46 @@
     }
   }
 }
-@media only screen and (max-width: 1353px) {
+
+@media only screen and (max-width: 1496px) {
   #dyr-hos-os {
-    padding: 2% 10% 15% 10%;
+    padding: 2% 7% 0 7%;
+    gap: 3%;
   }
 }
-
+@media only screen and (max-width: 1496px) {
+  #dyr-hos-os {
+    padding: 2% 5% 15% 5%;
+  }
+}
 @media only screen and (max-width: 1161px) {
   #dyr-hos-os {
-    padding: 2% 10% 18% 10%;
+    padding: 2% 4% 18% 4%;
   }
 }
 
-@media only screen and (max-width: 1063px) {
+@media only screen and (max-width: 1065px) {
   #dyr-hos-os {
-    padding: 2% 10% 20% 10%;
+    padding: 2% 3% 20% 3%;
+  }
+}
+@media only screen and (max-width: 873px) {
+  #dyr-hos-os {
+    padding: 2% 2% 20% 2%;
+    gap: 2%;
+  }
+}
+@media only screen and (max-width: 792px) {
+  #dyr-hos-os {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 2% 2% 0% 2%;
+    #et-dyr {
+      margin-bottom: 3%;
+    }
+    .dyr-hos-os__text p {
+      margin-bottom: 2%;
+    }
   }
 }
