--- a/src/css/index/bliv-frivillig.scss
+++ b/src/css/index/bliv-frivillig.scss
@@ -7,7 +7,6 @@
   }
   .bliv-frivillig-sectioner {
     display: grid;
-    grid-template-columns: repeat(3, 30%);
     column-gap: 3%;
     section {
       margin: 2% 0;
@@ -58,9 +57,8 @@
 }
 @media only screen and (max-width: 643px) {
   #bliv-frivillig .bliv-frivillig-sectioner {
-    display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: repeat(3, 30%);
+    grid-template-rows: auto; /* repeat(3, 33%) */
     row-gap: 3%;
   }
   #bliv-frivillig .bliv-frivillig-sectioner section p {
