--- a/src/css/index/header.scss
+++ b/src/css/index/header.scss
@@ -47,15 +47,17 @@
   }
 }
 @media only screen and (max-width: 1100px) {
-  #header p {
-    padding-left: 5%;
-    grid-column: 1 / span 2;
-    place-self: start;
-  }
-  #header h1 {
-    padding-left: 5%;
-    grid-column: 1 / span 2;
-    place-self: end start;
+  #header {
+    p {
+      padding-left: 5%;
+      grid-column: 1 / span 2;
+      place-self: start;
+    }
+    h1 {
+      padding-left: 5%;
+      grid-column: 1 / span 2;
+      place-self: end start;
+    }
   }
 }
 @media only screen and (max-width: 606px) {
