--- a/src/css/kvitteringsside/kvitteringsside.scss
+++ b/src/css/kvitteringsside/kvitteringsside.scss
@@ -1,22 +1,27 @@
 main {
+  text-align: center;
   h1 {
-    text-align: center;
     padding: 5% 0;
     font-size: 46px;
     text-decoration: underline;
   }
-  a {
-    color: #000;
-    font-weight: bold;
-    text-decoration: none;
+  .form {
+    margin: 0 40%;
     display: flex;
-    justify-content: center;
-    p {
-      padding-left: 1%;
-      font-size: 20px;
+    justify-content: space-evenly;
+    flex-direction: column;
+    input {
+      margin-top: 5%;
     }
-    i {
-      padding-top: 0.4%;
+    .form__submit {
+      color: #fff;
+      background-color: var(--button-blue);
+      border: none;
+      border-radius: 4px;
+      padding: 1%;
+    }
+    .error-message {
+      padding-top: 2%;
     }
   }
 }
