--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -20,6 +20,8 @@
 
             <%- include('../partials/adopter-et-dyr') %>
 
+            <%- include('../partials/slider') %>
+
             <%- include('../partials/dyr-hos-os') %>
         </main>
 
@@ -33,5 +35,7 @@
     <script src="./assets/js/fetch-om-os.js"></script>
     <script src="./assets/js/fetch-dyr-i-nod.js"></script>
     <script src="./assets/js/fetch-adopter-et-dyr.js"></script>
+    <script src="./assets/js/slider.js"></script>
+
 
 <%- include('../partials/last') %>
