--- a/src/html/templates/index.ejs
+++ b/src/html/templates/index.ejs
@@ -20,9 +20,9 @@
 
             <%- include('../partials/adopter-et-dyr') %>
 
-            <%- include('../partials/slider') %>
-
             <%- include('../partials/dyr-hos-os') %>
+            
+            <%- include('../partials/slider') %>
         </main>
 
         <%- include('../partials/footer') %>
@@ -35,7 +35,9 @@
     <script src="./assets/js/fetch-om-os.js"></script>
     <script src="./assets/js/fetch-dyr-i-nod.js"></script>
     <script src="./assets/js/fetch-adopter-et-dyr.js"></script>
+    <script src="./assets/js/fetch-slider.js"></script>
     <script src="./assets/js/slider.js"></script>
+
 
 
 <%- include('../partials/last') %>
