--- a/src/css/admin/admin.scss
+++ b/src/css/admin/admin.scss
@@ -1,7 +1,7 @@
 #log-in {
   background-color: var(--light-blue);
   border: solid 2px #000;
-  margin: 0 30%;
+  margin: 2% 30%;
   padding: 5% 10%;
   text-align: center;
   h1 {
