--- a/src/html/templates/administration.ejs
+++ b/src/html/templates/administration.ejs
@@ -11,11 +11,33 @@
         <h1>Nu er du kommet ind til administrations siden</h1>
 
         <main>
-
+            <section id="post">
+                <h2>Hvilken sektion vil du tilføje data til</h2>
+                <ul>
+                    <li class="postLi">Foreningen for Dyrevelfærd</li>
+                    <li class="postLi">Om os</li>
+                    <li class="postLi">Bliv frivillig</li>
+                    <li class="postLi">Står du med et dyr i nød?</li>
+                    <li class="postLi">Adopter et dyr</li>
+                    <li class="postLi">Dyr hos os</li>
+                </ul>
+            </section>
+            <section id="delete">
+                <h2>Hvilken sektion vil du slette data i</h2>
+                <ul>
+                    <li class="deleteLi">Foreningen for Dyrevelfærd</li>
+                    <li class="deleteLi">Om os</li>
+                    <li class="deleteLi">Bliv frivillig</li>
+                    <li class="deleteLi">Står du med et dyr i nød?</li>
+                    <li class="deleteLi">Adopter et dyr</li>
+                    <li class="deleteLi">Dyr hos os</li>
+                </ul>
+            </section>
         </main>
 
         <%- include('../partials/footer') %>
 
     </div>
+    <script src="./assets/js/administration.js"></script>
 
-<%- include('../partials/last') %>
+    <%- include('../partials/last') %>
