administartions siden rettesle

--- a/src/html/templates/administration.ejs
+++ b/src/html/templates/administration.ejs
@@ -14,27 +14,21 @@
             <section id="post">
                 <h2>Hvilken sektion vil du tilføje data til</h2>
                 <ul>
-                    <li class="postLi">Foreningen for Dyrevelfærd</li>
-                    <li class="postLi">Om os</li>
-                    <li class="postLi">Bliv frivillig</li>
-                    <li class="postLi">Står du med et dyr i nød?</li>
-                    <li class="postLi">Adopter et dyr</li>
-                    <li class="postLi">Dyr hos os</li>
+                    <li class="postLi">Adopt sektionerne</li>
+                    <li class="postLi">Abouts sektionerne</li>
+                    <li class="postLi">Volunteers sektionerne</li>
+                    <li class="postLi">Animals sektionerne</li>
                 </ul>
             </section>
             <section id="delete">
                 <h2>Hvilken sektion vil du slette data i</h2>
                 <ul>
-                    <li class="deleteLi">Foreningen for Dyrevelfærd</li>
-                    <li class="deleteLi">Om os</li>
-                    <li class="deleteLi">Bliv frivillig</li>
-                    <li class="deleteLi">Står du med et dyr i nød?</li>
-                    <li class="deleteLi">Adopter et dyr</li>
-                    <li class="deleteLi">Dyr hos os</li>
-                </ul>
+                    <li class="deleteLi">Adopt sektionerne</li>
+                    <li class="deleteLi">Abouts sektionerne</li>
+                    <li class="deleteLi">Volunteers sektionerne</li>
+                    <li class="deleteLi">Animals sektionerne</li>                </ul>
             </section>
         </main>
-
         <%- include('../partials/footer') %>
 
     </div>
