--- a/src/css/kvitteringsside/kvitteringsside.scss
+++ b/src/css/kvitteringsside/kvitteringsside.scss
@@ -6,7 +6,7 @@ main {
     text-decoration: underline;
   }
   .form {
-    margin: 0 40%;
+    margin: 0 40% 5% 40%;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
