--- a/src/css/admin/admin.scss
+++ b/src/css/admin/admin.scss
@@ -1,7 +1,7 @@
 #log-in {
   background-color: var(--light-blue);
   border: solid 2px #000;
-  margin: 2% 30%;
+  margin: 3% 30%;
   padding: 5% 10%;
   text-align: center;
   h1 {
@@ -25,5 +25,30 @@
     .error-message {
       padding-bottom: 3%;
     }
+  }
+}
+@media only screen and (max-width: 1281px) {
+  #log-in {
+    margin: 3% 27%;
+  }
+}
+@media only screen and (max-width: 1093px) {
+  #log-in {
+    margin: 3% 25%;
+  }
+}
+@media only screen and (max-width: 938px) {
+  #log-in {
+    margin: 3% 23%;
+  }
+}
+@media only screen and (max-width: 677px) {
+  #log-in {
+    margin: 3% 21%;
+  }
+}
+@media only screen and (max-width: 565px) {
+  #log-in {
+    margin: 3% 5%;
   }
 }
