--- a/src/css/administration/administration.scss
+++ b/src/css/administration/administration.scss
@@ -10,10 +10,100 @@ main {
   ul li {
     cursor: pointer;
     list-style: none;
-    padding-left: 3%;
   }
   #post,
   #delete {
-    margin: 3% 0 2% 0;
+    margin: 3% 0 3% 0;
+  }
+}
+
+#postForm form,
+#deleteForm form {
+  background-color: var(--light-blue);
+  border: solid 2px #000;
+  padding: 5%;
+  margin: 2% 30%;
+  justify-content: space-around;
+  flex-direction: column;
+  input,
+  div,
+  textarea,
+  h3 {
+    margin-bottom: 2%;
+  }
+  input,
+  div,
+  textarea {
+    padding: 1%;
+  }
+  .form__submit {
+    background-color: var(--button-blue);
+    color: #fff;
+    border: solid 1px #fff;
+    border-radius: 6px;
+  }
+}
+.form-adoptsections {
+  display: none;
+}
+.form-abouts {
+  display: none;
+}
+.form-adoptsections {
+  display: none;
+}
+.form-abouts {
+  display: none;
+}
+.form-adoptsections {
+  display: none;
+}
+@media only screen and (max-width: 789px) {
+  main {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 661px) {
+  h1 {
+    font-size: 25px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+}
+@media only screen and (max-width: 545px) {
+  h1 {
+    font-size: 22px;
+  }
+  h2 {
+    font-size: 17px;
+  }
+}
+@media only screen and (max-width: 483px) {
+  h1 {
+    font-size: 19px;
+  }
+  h2 {
+    font-size: 14px;
+  }
+  li {
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width: 393px) {
+  h1 {
+    font-size: 17px;
+  }
+  h2 {
+    font-size: 12px;
+  }
+  li {
+    font-size: 10px;
+  }
+}
+@media only screen and (max-width: 358px) {
+  h1 {
+    font-size: 15px;
   }
 }
