--- a/src/css/kvitteringsside/kvitteringsside.scss
+++ b/src/css/kvitteringsside/kvitteringsside.scss
@@ -6,12 +6,13 @@ main {
     text-decoration: underline;
   }
   .form {
-    margin: 0 40% 5% 40%;
+    margin: 0 39% 5% 39%;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
     input {
       margin-top: 5%;
+      width: 100%;
     }
     .form__submit {
       color: #fff;
@@ -22,6 +23,120 @@ main {
     }
     .error-message {
       padding-top: 2%;
+    }
+  }
+}
+@media only screen and (max-width: 1087px) {
+  main .form {
+    margin: 0 36% 5% 36%;
+  }
+}
+@media only screen and (max-width: 884px) {
+  main {
+    h1 {
+      font-size: 42px;
+    }
+    .form {
+      margin: 0 34% 5% 34%;
+    }
+  }
+}
+@media only screen and (max-width: 815px) {
+  main {
+    h1 {
+      font-size: 36px;
+    }
+    .form {
+      margin: 0 30% 5% 30%;
+    }
+  }
+}
+@media only screen and (max-width: 710px) {
+  main {
+    h1 {
+      font-size: 34px;
+    }
+    .form {
+      margin: 0 28% 5% 28%;
+    }
+  }
+}
+@media only screen and (max-width: 675px) {
+  main {
+    h1 {
+      font-size: 32px;
+    }
+  }
+}
+@media only screen and (max-width: 623px) {
+  main {
+    h1 {
+      font-size: 30px;
+    }
+    .form {
+      margin: 0 25% 5% 25%;
+    }
+  }
+}
+@media only screen and (max-width: 577px) {
+  main {
+    h1 {
+      font-size: 26px;
+    }
+    h2 {
+      font-size: 22px;
+    }
+    .form {
+      margin: 0 23% 5% 23%;
+    }
+  }
+}
+@media only screen and (max-width: 512px) {
+  main {
+    h1 {
+      font-size: 24px;
+    }
+    h2 {
+      font-size: 20px;
+    }
+    .form {
+      margin: 0 21% 5% 21%;
+    }
+  }
+}
+@media only screen and (max-width: 468px) {
+  main {
+    h1 {
+      font-size: 22px;
+    }
+    h2 {
+      font-size: 18px;
+    }
+    .form {
+      margin: 0 20% 5% 20%;
+    }
+  }
+}
+@media only screen and (max-width: 426px) {
+  main {
+    h1 {
+      font-size: 20px;
+    }
+    h2 {
+      font-size: 16px;
+    }
+    .form {
+      margin: 0 18% 5% 18%;
+    }
+  }
+}
+@media only screen and (max-width: 392px) {
+  main {
+    h1 {
+      font-size: 16px;
+    }
+    h2 {
+      font-size: 12px;
     }
   }
 }
