administrations form css

--- a/src/css/administration/administration.scss
+++ b/src/css/administration/administration.scss
@@ -43,19 +43,13 @@ main {
     border-radius: 6px;
   }
 }
-.form-adoptsections {
+.form-title-content {
   display: none;
 }
-.form-abouts {
+.form-volunteers {
   display: none;
 }
-.form-adoptsections {
-  display: none;
-}
-.form-abouts {
-  display: none;
-}
-.form-adoptsections {
+.form-animals {
   display: none;
 }
 @media only screen and (max-width: 789px) {
