--- a/src/html/templates/administration.ejs
+++ b/src/html/templates/administration.ejs
@@ -65,7 +65,6 @@
             <form method="GET" class="form-volunteers" novalidate>
                 <h3></h3>
                 <input name="text" class="form_input form__overskrift" placeholder="Overskrift">
-                <input name="text" class="form_input form__extra" placeholder="Ekstra">
                 <textarea name="comment" cols="30" rows="10" class="form_input form__comment" placeholder="Brødtekst"></textarea>
                 <div class="error-message"></div>
                 <input type="submit" value="Rediger" class="form__submit">
@@ -73,7 +72,7 @@
             <form method="GET" class="form-animals" novalidate>
                 <h3></h3>
                 <input name="text" class="form_input form__overskrift" placeholder="Overskrift">
-                <input type="text" name="number" class="form_input form__number" placeholder="Alder">
+                <input type="text" name="number" class="form_input form__age" placeholder="Alder">
                 <textarea name="comment" cols="30" rows="10" class="form_input form__comment" placeholder="Brødtekst"></textarea>
                 <div class="error-message"></div>
                 <input type="submit" value="Rediger" class="form__submit">
