--- a/src/html/partials/nyhedsbrev.ejs
+++ b/src/html/partials/nyhedsbrev.ejs
@@ -17,5 +17,6 @@
     <input name="name" class="form_input form__name" placeholder="Navn" />
 
     <input type="submit" value="Tilmeld" class="form__submit" />
+    <a href="kvitteringsside.html?afmeld=true">Afmeld nyhedsbrevet</a>
   </form>
 </section>
