nu kan man også slette fra apiet fra administrationssiden

--- a/src/css/administration/administration.scss
+++ b/src/css/administration/administration.scss
@@ -52,6 +52,9 @@ main {
 .form-animals {
   display: none;
 }
+.form-delete {
+  display: none;
+}
 @media only screen and (max-width: 789px) {
   main {
     flex-direction: column;
