--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -56,22 +56,34 @@
   #nav .img-h4 #nav-logo {
     height: 31px;
   }
+  #nav .img-h4 h4 {
+    padding: 2% 0 0 2%;
+    font-size: 18px;
+  }
 }
 @media only screen and (max-width: 814px) {
   #nav ul {
     width: 50%;
   }
+  #nav .img-h4 h4 {
+    padding: 3% 0 0 2%;
+    font-size: 15px;
+  }
 }
 @media only screen and (max-width: 692px) {
   #nav {
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding: 2% 3%;
     ul {
       width: 14%;
       display: none;
     }
-    .img-h4 h4 {
-      font-size: 18px;
-      padding: 2% 0 0 2%;
+    .img-h4 {
+      width: 50%;
+      h4 {
+        font-size: 12px;
+        padding: 4% 0 0 2%;
+      }
     }
   }
   #drop-down {
@@ -80,16 +92,15 @@
   }
 }
 @media only screen and (max-width: 500px) {
-  #nav .img-h4 h4 {
-    font-size: 10px;
-    padding: 3% 0 0 2%;
+  #nav .img-h4 {
+    width: 60%;
   }
 }
 @media only screen and (max-width: 395px) {
   #nav .img-h4 {
-    width: 38%;
+    width: 67%;
   }
   #nav ul li a {
-    font-size: 13px;
+    font-size: 10px;
   }
 }
